# cpp-practice

./: Car.h  CarType.h  Counter.cc  Counter.h  Counter_unittest  Counter_unittest.cc  Type.h  Vehicle.cpp  Vehicle.h  VehicleType.h
FileStream/: a.out  fstream.cpp  new.txt
STL/: a.out  queues.cpp  vector  vector.cpp
UnitTesting/: a.out  my_sum.c  test_my_sum.c
chatgpttest/: CMakeLists.txt  math.cpp  math.h  my_test_file.cpp
my_project/: hello_test.cc
practice1/: Car.cpp  Car.h  Functionalities.cpp  Functionalities.h  Insurance.cpp  Insurance.h  InsuranceType.h  Main.cpp  Vehicle.cpp  Vehicle.h  VehicleType.h  a.out  app
practice2/: Customer.cpp  Customer.h  Functionalities.cpp  Functionalities.h  Main.cpp  a.out
